Add multi-column sort with dropdown UI and refactor filter/sort handling
- Replace pill-based sort with a multi-select dropdown; button label reflects
  selections in order; checkmarks show active sorts; per-field direction is
  mutually exclusive (can't sort a field both ways at once)
- Move to Spring Data's SortHandlerMethodArgumentResolver (@SortDefault) to
  eliminate manual sort parameter parsing
- Introduce TaskFilter enum with nested Spring converter so ?filter=completed
  binds directly without string comparisons in service/controller
- Add sort field constants (FIELD_TITLE, FIELD_CREATED_AT, etc.) to Task entity
  so field name strings are defined once and referenced everywhere
- Fix @Query ignoring Sort by replacing it with findAll(Sort) + in-memory
  filter/search (appropriate for H2 demo dataset)
- Fix URL encoding: use field,direction format (no %2C) since
  SortHandlerMethodArgumentResolver handles comma as field/direction separator
- Rearrange toolbar into two rows: search on top, filter + sort below

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>